--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@next/font": "^13.4.10",
+    "@react-spring/web": "9.5.5",
     "@tanstack/react-query": "^4.32.0",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
@@ -33,6 +34,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
+    "react-tinder-card": "^1.6.4",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
