--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
+    "react-select": "^5.8.0",
     "react-tinder-card": "^1.6.4",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
